Fixed tables stretching for datatables wrapper

--- a/src/scss/ui/general.scss
+++ b/src/scss/ui/general.scss
@@ -111,3 +111,11 @@ h3{
   min-height: 55px;
   height: 55px;
 }
+
+/**
+  Datatables
+ */
+
+.dataTables_wrapper {
+  width: 100%;
+}
